--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,9 @@
     "next/babel"
   ],
   "plugins": [
-    ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]
+    ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ],
+    ["module-resolver", {
+      "root": ["./"]
+    }]
   ]
 }
