add some hover styles

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "styled-components": "^2.0.0-17"
+  },
+  "now": {
+    "alias": "next-go"
   }
 }
