--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-styled-components": "^1.1.7",
     "express": "^4.15.4",
+    "husky": "^0.14.3",
     "lint-staged": "^4.0.3",
     "next": "^3.0.6",
     "next-routes": "^1.0.40",
@@ -27,9 +28,11 @@
   },
   "standard": {
     "parser": "babel-eslint",
-    "ignore": ["**/node_modules/**"]
+    "ignore": [
+      "**/node_modules/**"
+    ]
   },
   "lint-staged": {
-    "*.js": "standard"
+    "*.js": ["standard --fix", "git add"]
   }
 }
